<resources>
    <string name="app_name">ChoresRPG</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="chore_list_empty">No chores :(, add some</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_fragment_label">first fragment</string>
    <string name="add_chore">Add a new chore</string>
    <string name="chore_description">Chore description</string>
    <string name="save">Save</string>
    <string name="chore_saved">Chore Saved</string>
    <string name="chore_List_content_description">Chore Saved</string>
    <string name="chore_day_hint">Chore day</string>
    <string name="week_day_button_monday">Mo</string>
    <string name="week_day_button_tuesday">Tu</string>
    <string name="week_day_button_wednesday">We</string>
    <string name="week_day_button_thursday">Th</string>
    <string name="week_day_button_friday">Fr</string>
    <string name="week_day_button_saturday">Sa</string>
    <string name="week_day_button_sunday">Su</string>
    <string name="week_day_button_monday_full">Monday</string>
    <string name="week_day_button_tuesday_full">Tuesday</string>
    <string name="week_day_button_wednesday_full">Wednesday</string>
    <string name="week_day_button_thursday_full">Thursday</string>
    <string name="week_day_button_friday_full">Friday</string>
    <string name="week_day_button_saturday_full">Saturday</string>
    <string name="week_day_button_sunday_full">Sunday</string>

    <string name="delete_all_save_data">Delete All Save Data</string>
    <string name="chore_icon">Chore Icon</string>
</resources>